<resources>
    <string name="app_name">AlmeriTalk</string>
    <string name="nombre_desarrollador">Pedro Martin Aguilera</string>

    <!--- boton inicial -->
    <string name="Btn_ir_login">Log in</string>
    <string name="Btn_ir_login_google">Log in with Google</string>
    <string name="Btn_sign_up">Sign up</string>
    <string name="login">Log in to AlmeriTalk</string>


    <!--- registro edit text -->
    <string name="R_Et_username">Username</string>
    <string name="R_Et_email">Email</string>
    <string name="R_Et_password">Password</string>
    <string name="R_Et_r_password">Repeat password</string>
    <string name="Btn_sign_in">Sign up</string>

    <string name="menu_exit">Log out</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_visit">View profile</string>
    <string name="menu_group">Group details</string>
    <string name="menu_checkContacts">Import contacts</string>


    <string name="L_Et_email">Email</string>
    <string name="L_Et_password">Password</string>
    <string name="Btn_login">Log in</string>
    <string name="TXT_no_account">You do not have an account?</string>
    <string name="TXT_ir_sign_up">Sign up</string>
    <string name="L_forget_password">Forgotten password?</string>
    <string name="L_instructions">Enter your email to reset your password</string>ç
    <string name="Btn_send_email">Send</string>
    <string name="L_Et_group_name">Enter group name</string>
    <string name="Btn_login_google">Continue with Google</string>
    <string name="Btn_login_facebook">Continue with Facebook</string>


    <string name="username">Username</string>

    <string name="Item_username">Username</string>
    <string name="Item_user_email">User email</string>
    <string name="Item_last_message">Last message</string>
    <string name="Item_not_seen_messages">12</string>

    <string name="Et_search_user">Search user</string>
    <string name="Et_group_name"> Enter the group name </string>

    <!-- User Profile-->
    <string name="P_username">Username</string>
    <string name="P_email">Email</string>
    <string name="P_phone">Phone number</string>
    <string name="P_age">Age</string>
    <string name="P_location">Location</string>
    <string name="P_name">Name</string>
    <string name="P_surnames">Surnames</string>
    <string name="P_provider_txt">Provider : </string>
    <string name="P_provider"> -- </string>
    <string name="P_private">Private profile</string>
    <string name="Btn_save">Save</string>

    <string name="Btn_verify">Not verified</string>

    <string name="setPhone">Write your phone number</string>
    <string name="Btn_accept_phone">Accept</string>

    <string name="TXT_verified_account">Verified account</string>
    <string name="Btn_verified_account">Brilliant</string>


    <!-- Edit image Profile-->
    <string name="Btn_select_image">Select image</string>

    <!--Chat -->
    <string name="C_username">Username</string>
    <string name="C_message">Type your message</string>

    <!--Perfil visitado -->
    <string name="PV_profile">User profile</string>
    <string name="PV_username">Username</string>
    <string name="PV_email">Email</string>
    <string name="PV_uid_txt">Identifier: </string>
    <string name="PV_uid">Uid</string>

    <!--Grupo visitado -->
    <string name="GV_group">Group profile</string>
    <string name="GV_groupName">Group name</string>
    <string name="GV_members">Group members</string>

    <string name="PV_name_txt">Name: </string>
    <string name="PV_name"> -- </string>
    <string name="PV_surnames_txt">Surnames: </string>
    <string name="PV_surnames"> -- </string>
    <string name="PV_phone_txt">Phone number: </string>
    <string name="PV_phone"> -- </string>
    <string name="PV_age_txt">Age: </string>
    <string name="PV_age"> -- </string>
    <string name="PV_provider_txt">Provider: </string>
    <string name="PV_provider"> -- </string>
    <string name="PV_location_txt">Location: </string>
    <string name="PV_location"> -- </string>

    <string name="Btn_call"> Call </string>

    <!-- Item chat-->
    <string name="TXT_see_message">Hi, how are u?</string>

    <string name="Btn_close_w"> Close </string>


</resources>