<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/backgroundChat">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!-- Banner -->
            <ImageView
                android:src="@drawable/banner1"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"/>

            <!-- image profile -->
            <ImageView
                android:id="@+id/P_image"
                android:background="#354f60"
                android:layout_marginStart="15dp"
                android:layout_marginTop="130dp"
                android:scaleType="centerCrop"
                android:layout_width="140dp"
                android:layout_height="140dp"/>

            <!-- edit image profile -->
            <ImageView
                android:id="@+id/P_Edit_banner"
                android:src="@drawable/ic_edit_banner"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                app:tint="@android:color/black"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/P_username"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/P_username"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/P_email"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/P_email"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/P_provider_txt"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.cardview.widget.CardView
                    android:padding="0.5dp"
                    android:backgroundTint="#48c980"
                    android:layout_marginStart="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/P_provider"
                        android:textSize="17sp"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:text="@string/P_provider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </androidx.cardview.widget.CardView>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_verify"
                android:text="@string/Btn_verify"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_width="150dp"
                android:backgroundTint="#404249"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/P_name"
                    android:hint="@string/P_name"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/P_surnames"
                    android:hint="@string/P_surnames"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/P_age"
                    android:hint="@string/P_age"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/P_phone"
                        android:text="@string/P_phone"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/edit_phone"
                        android:src="@drawable/phone"
                        android:layout_marginStart="15dp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_save"
                android:text="@string/Btn_save"
                android:backgroundTint="#404249"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                app:icon="@drawable/ic_save"
                app:iconTint="@color/white"
                android:layout_width="150dp"
                android:layout_height="wrap_content">



            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

    </LinearLayout>

</ScrollView>