<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundChat"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/login"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_login_google"
                android:layout_width="300dp"
                app:cornerRadius="10dp"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Btn_login_google"
                app:icon="@drawable/login_google"
                android:textColor="@color/white"
                app:iconTint="@android:color/transparent"
                app:iconTintMode="add"
                android:background="@drawable/border_white"/>

            <View
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white" />

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/L_Et_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:hint="@string/L_Et_email"
                    android:inputType="textEmailAddress"
                    android:padding="20dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/L_Et_password"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/L_Et_password"
                    android:inputType="textPassword"
                    android:padding="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_login"
                android:layout_width="300dp"
                app:cornerRadius="100dp"
                android:textAllCaps="false"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorBlue"
                android:textColor="@color/colorGrey2"
                android:text="@string/Btn_login" />

            <TextView
                android:id="@+id/L_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:text="@string/L_forget_password"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/qrCodeImageLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>