<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".group.VisitedGroupActivity"
    android:background="?attr/backgroundChat">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/GV_group"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Imagen de perfil del grupo-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/GV_groupImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/imagen_usuario_visitado" />

        <!-- Nombre del grupo -->
        <TextView
            android:id="@+id/GV_groupName"
            android:text="@string/GV_groupName"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple_500" />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/GV_members"
            android:textSize="20sp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/GV_users"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            tools:listitem="@layout/item_user_add_group" />

        <View
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple_500" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>